--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Charity Finder</title>
+  <title>Charity Search</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
@@ -215,7 +215,7 @@
 </head>
 <body>
   <nav>
-    <button class="menu-toggle" onclick="toggleMenu()"><b>Charity Finder</b></button>
+    <button class="menu-toggle" onclick="toggleMenu()"><b>Charity Search</b></button>
     <div class="nav-links">
       <a href="search.html" class="active">Search</a>
       <a href="about.html">About Us</a>
