--- a/other.html
+++ b/other.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Charity Finder — Downingtown West HS Project</title>
+  <title>Charity Search — Downingtown West HS Project</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
@@ -89,7 +89,7 @@
 <body>
 
   <div class="container">
-    <h1>Charity Finder</h1>
+    <h1>Charity Search</h1>
 
     <div class="meta">
       <p><strong>Project started:</strong> August 6, 2025 (8/6/2025)</p>
@@ -98,7 +98,7 @@
 
     <h2>About this project</h2>
     <p>
-      This website — <strong>Charity Finder</strong> — was built as a graduation project by students at
+      This website — <strong>Charity Search</strong> — was built as a graduation project by students at
       <strong>Downingtown West High School</strong>. Its goal is to help users easily find the right charity to support by providing a searchable,
       organized list of charities along with descriptions, keywords, and links to their websites.
     </p>
