--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Welcome to Charity Finder</title>
+  <title>Welcome to Charity Search</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -115,7 +115,7 @@
 <body>
 
   <div class="container">
-    <h1>Welcome to Charity Finder</h1>
+    <h1>Welcome to Charity Search</h1>
     <p>
       Giving can change lives. Whether you donate money, food, clothing, or your time, every action you take helps build a better world.
     </p>
