--- a/about.html
+++ b/about.html
@@ -1,130 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
-  <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+.team-member img {
+  width: 100%;
+  height: 180px;
+  max-width: 180px;
+  border-radius: 16px;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+  object-fit: cover;
+  object-position: center;
+}
 
-    body {
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(to bottom right, #f0f4f8, #dbeafe);
-      color: #1e293b;
-      min-height: 100vh;
-    }
+@media (max-width: 600px) {
+  .team-photos {
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .container {
-      max-width: 1000px;
-      margin: 40px auto;
-      background: white;
-      border-radius: 16px;
-      padding: 30px;
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
-      animation: fadeIn 0.8s ease-in-out;
-      text-align: center;
-    }
+  .team-member {
+    max-width: none;
+    width: 80%;
+  }
 
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 30px;
-      color: #1e3a8a;
-    }
+  .team-member img {
+    height: 200px;
+    max-width: 100%;
+  }
 
-    h2 {
-      color: #1e3a8a;
-      margin-top: 30px;
-      margin-bottom: 10px;
-      font-weight: 600;
-      font-size: 1.5rem;
-    }
+  h1 {
+    font-size: 2rem;
+  }
 
-    p {
-      margin-bottom: 15px;
-      line-height: 1.6;
-      color: #475569;
-    }
-
-    .team-photos {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 30px;
-      margin: 20px 0;
-    }
-
-    .team-member {
-      text-align: center;
-      max-width: 200px;
-    }
-
-    .team-member img {
-      width: 100%;
-      max-width: 180px;
-      border-radius: 16px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-      object-fit: cover;
-    }
-
-    .photo-caption {
-      font-weight: 600;
-      color: #1e3a8a;
-      font-size: 1.1rem;
-      margin-top: 10px;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @media (max-width: 600px) {
-      .container {
-        padding: 20px;
-      }
-
-      h1 {
-        font-size: 2rem;
-      }
-
-      h2 {
-        font-size: 1.25rem;
-      }
-
-      .team-member img {
-        max-width: 150px;
-      }
-    }
-  </style>
-</head>
-<body>
-
-  <div class="container">
-    <h1>About Us</h1>
-    <p>We are dedicated to connecting individuals with charitable causes and organizations. Your support helps us make a positive impact worldwide.</p>
-
-    <h2>This project was created by:</h2>
-
-    <div class="team-photos">
-      <div class="team-member">
-        <img src="media/evano.jpg" alt="Photo of Evan O" />
-        <div class="photo-caption">Evan O</div>
-      </div>
-      <div class="team-member">
-        <img src="media/nathanp.jpg" alt="Photo of Nathan P" />
-        <div class="photo-caption">Nathan P</div>
-      </div>
-      <div class="team-member">
-        <img src="media/fredb.jpg" alt="Photo of Fred B" />
-        <div class="photo-caption">Fred B</div>
-      </div>
-    </div>
-
-    <h2>Purpose</h2>
-    <p>This website was built by students as their graduation project at Downingtown West High School.</p>
-    <p>Its goal is to help users easily find the right charity by providing a searchable and organized list of charities along with descriptions, keywords, and links to their websites.</p>
-  </div>
-
-</body>
-</html>
+  h2 {
+    font-size: 1.25rem;
+  }
+}
