--- a/about.html
+++ b/about.html
@@ -65,11 +65,12 @@
     .team-member img {
       width: 180px;
       height: 180px;
-      border-radius: 16px;
+      border-radius: 20px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-      object-fit: contain; /* Show full image without crop */
+      object-fit: contain;
       object-position: center;
-      background-color: #f1f5f9; /* subtle background if image doesn't fill space */
+      background-color: #f1f5f9;
+      padding: 5px;
     }
 
     .photo-caption {
@@ -100,6 +101,7 @@
       .team-member img {
         width: 150px;
         height: 150px;
+        border-radius: 16px;
       }
 
       h1 {
