--- a/about.html
+++ b/about.html
@@ -68,8 +68,7 @@
       border-radius: 20px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
       object-fit: contain;
-      object-position: center;
-      background-color: #f1f5f9;
+      background-color: #f8fafc;
       padding: 5px;
     }
 
@@ -101,7 +100,6 @@
       .team-member img {
         width: 150px;
         height: 150px;
-        border-radius: 16px;
       }
 
       h1 {
