--- a/about.html
+++ b/about.html
@@ -68,7 +68,8 @@
       border-radius: 20px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
       object-fit: contain;
-      background-color: #f8fafc;
+      object-position: center;
+      background-color: #f1f5f9;
       padding: 5px;
     }
 
@@ -100,6 +101,7 @@
       .team-member img {
         width: 150px;
         height: 150px;
+        border-radius: 16px;
       }
 
       h1 {
