--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
         <div class="photo-caption">Nathan P</div>
       </div>
       <div class="team-member">
-        <img src="media/fredb.jpg" alt="Photo of Fred B" />
+        <img src="fred.jpg" alt="Photo of Fred B" />
         <div class="photo-caption">Fred B</div>
       </div>
     </div>
